--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@ permalink:        pretty
 #relative_permalinks: true
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:            My Blog
+tagline:          'Scribbling my understanding of Favourite topics on Programming'
+description:      'Scribbling my understanding of Favourite topics on Programming'
 #url:              http://hyde.getpoole.com
 #baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Afsal Thaj'
+  url:            https://github.com/afsalthaj
 
 paginate:         5
 
