--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ permalink:        pretty
 
 # Setup
 title:            My Blog
-tagline:          'Scribbling my understanding of Favourite topics on Programming'
-description:      'Scribbling my understanding of Favourite topics on Programming'
+tagline:          'Scribbling my understandings on various Programming concepts'
+description:      'Scribbling my understanding on various Programming concepts'
 #url:              http://hyde.getpoole.com
 #baseurl:          /
 
